--- a/css/styles.css
+++ b/css/styles.css
@@ -80,3 +80,48 @@ body{
     z-index: 1;
 }
 
+.latest-products {
+    margin-top: 40px;
+}
+
+.latest-products .section-heading a {
+    font-size: 13px;
+    font-weight: 700;
+}
+
+.product-item {
+    border: 2px solid #eee;
+    margin-bottom: 30px;
+}
+
+.product-item .down-content {
+    padding: 30px;
+    position: relative;
+}
+
+.product-item img {
+    width: 100%;
+
+}
+
+.product-item .down-content h4 {
+    font-size: 17px;
+    color: #1a6692;
+    margin-bottom: 10px;
+}
+
+.product-item .down-content h6 {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 18px;
+    color: #121212;
+}
+
+.product-item .down-content span {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    font-size: 13px;
+    font-weight: 500;
+}
